# truckbot

./: LICENSE  README.md  plot_particles.py
src/control/: CMakeLists.txt  README.md  package.xml
src/control/config/: encoder_driver.yaml  motor_controller.yaml  motor_driver.yaml
src/control/include/: EncoderDriver.h  MotorController.h  MotorDriver.h
src/control/launch/: control.launch.py  encoder_driver.launch.py  motor_controller.launch.py  motor_driver.launch.py
src/control/src/: EncoderDriver.cpp  EncoderDriverMiddleware.cpp  MotorController.cpp  MotorControllerMiddleware.cpp  MotorDriver.cpp  MotorDriverMiddleware.cpp  TeleOpMiddleware.cpp
src/icm20948_driver/: CMakeLists.txt  README.md  package.xml
src/icm20948_driver/config/: imu.yaml
src/icm20948_driver/include/: rpi5ICM20948.h
src/icm20948_driver/launch/: imu.launch.py
src/icm20948_driver/src/: IMUMiddleware.cpp  rpi5ICM20948.cpp
src/localization/: CMakeLists.txt  README.md  package.xml
src/localization/config/: particle_filter.yaml
src/localization/include/: EKF.h  Landmark.h  LocalizationHelpers.h  Particle.h  Particle.h.tmp.3227.f4c37da197e4  ParticleFilter.h  PersistentKDTree.h
src/localization/include/localization/: LowPassFilter.h
src/localization/launch/: ekf.launch.py  localization.launch.py  particle_filter.launch.py
src/localization/src/: EKF.cpp  EKFMiddleware.cpp  LowPassFilter.cpp  LowPassFilter.h  ParticleFilter.cpp  ParticleFilterMiddleware.cpp  ParticleFilterSimulator.cpp
src/localization/test/: test_particle_filter_simulator.cpp  test_persistent_kd_tree.cpp
src/navigation/: CMakeLists.txt  README.md  package.xml
src/navigation/config/: pure_pursuit.yaml  simple_path_server.yaml  simple_path_server_params.yaml  spline_generator.yaml  voxelization.yaml
src/navigation/include/: PathTracker.h  PurePursuitController.h  SplineGenerator.h  VehiclePose.h
src/navigation/launch/: navigation.launch.py  path_tracker.launch.py  pure_pursuit.launch.py  simple_path_server.launch.py  spline_generator.launch.py
src/navigation/src/: PathTracker.cpp  PathTrackerMiddleware.cpp  PurePursuitController.cpp  PurePursuitControllerMiddleware.cpp  SimplePathServerMiddleware.cpp  SplineGenerator.cpp  SplineGeneratorMiddleware.cpp
src/perception/: CMakeLists.txt  README.md  package.xml
src/perception/config/: corner_detector.yaml  line_extraction.yaml  voxelization.yaml
src/perception/include/: CornerDetector.h  FeatureDetection.h  LineExtraction.h  Voxelization.h
src/perception/launch/: corner_detector.launch.py  line_extraction.launch.py  voxelization.launch.py
src/perception/src/: CornerDetector.cpp  CornerDetectorMiddleware.cpp  FeatureDetection.cpp  FeatureDetectionMiddleware.cpp  LineExtraction.cpp  LineExtractionMiddleware.cpp  Voxelization.cpp  VoxelizationMiddleware.cpp
src/teleop/: CMakeLists.txt  README.md  package.xml
src/teleop/include/: MotorController.h
src/teleop/src/: MotorController.cpp  MotorControllerMiddleware.cpp  TeleOp.cpp
src/truckbot/: CMakeLists.txt  package.xml
src/truckbot/include/truckbot/: EKF.h  ICM20948.h  MotorController.h  rpi5ICM20948.h  rpi5_ICM20948.h
src/truckbot/src/: EKF.cpp  EKFMiddleware.cpp  ICM20948.cpp  IMUMiddleware.cpp  MotorController.cpp  MotorControllerMiddleware.cpp  rpi5ICM20948.cpp  rpi5_ICM20948.cpp
src/truckbot_bringup/: CMakeLists.txt  README.md  package.xml
src/truckbot_bringup/launch/: truckbot.launch.py
viz/: plot_bag.py  truckbot.rviz
