<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>0.1.0</version>
  <description>LiDAR point cloud processing and Euclidean clustering for truckbot obstacle awareness</description>
  <maintainer email="emoryducote@gmail.com">Emory Ducote</maintainer>
  <license>MIT</license>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>libopencv-dev</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
