<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>truckbot_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch package for truckbot</description>
  <maintainer email="emoryducote@gmail.com">Emory Ducote</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>control</exec_depend>
  <exec_depend>localization</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>icm20948_driver</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
